# WebUpdateBot

./: .env.example  .gitignore  Dockerfile  README.md  agents.md  bot.py  database.py  docker-compose.yml  get_chat_id.py  monitor.py  pyproject.toml
tests/: test_bot.py  test_database.py  test_monitor.py
